cmake_minimum_required(VERSION 2.8)
set(SRC_LIST main.cpp kafka_producer.cpp)
add_definitions(-g -fPIC -std=c++11)
include_directories(/home/panghao/include/librdkafka /home/panghao/include  /home/panghao/include/db /usr/local/include/librdkafka )
#add_library(tele SHARED ${SRC_LIST})
#set_target_properties(store PROPERTIES VERSION 1.1)
LINK_DIRECTORIES(/home/panghao/libs /usr/local/lib /usr/local/ssl/lib)
add_executable(prod ${SRC_LIST})
target_link_libraries(prod z jsoncpp ssl crypto rdkafka glog)
